# QCCSDK-QCC74x

./: .gitattributes  .lfsconfig  CMakeLists.txt  NOTICE.txt  README.md  VERSION  project.build
bsp/board/qcc743_lp_dk/: CMakeLists.txt  board.c  qcc743_flash.ld  qcc743_ram.ld
bsp/board/qcc743dk/: CMakeLists.txt  board.c  qcc743_chip_mfgtest.ld  qcc743_chip_psram.ld  qcc743_flash.ld  qcc743_lp.ld  qcc743_wfa_flash.ld  run_in_ram_function.ld.in
bsp/board/qcc744dk/: CMakeLists.txt  board.c  board.h  qcc743_chip_psram.ld  qcc743_flash.ld  qcc743_lp.ld
bsp/common/: CMakeLists.txt
bsp/common/audio/: audio.h  audio_conf.h
bsp/common/ethernet/: ethernet_phy.c  ethernet_phy.h  ethernetif.c  ethernetif.h  phy_8201f.c  phy_8201f.h  phy_8720.c  phy_8720.h  phy_ar8032.c  phy_ar8032.h  phy_bl3011.c  phy_bl3011.h
bsp/common/image_sensor/: gc2145.h
bsp/common/lcd/: lcd.c  lcd.h  lcd_conf.h
bsp/common/sdcard/: sdh_sdcard.c  sdh_sdcard.h
cmake/: compiler_flags.cmake  extension.cmake  qcc74x_flash.cmake  qcc74x_sdk-config.cmake
components/: CMakeLists.txt
components/fs/romfs/: qcc74x_romfs.c  qcc74x_romfs.h
components/libc/: CMakeLists.txt  printf.c  stdatomic.c
components/mm/: CMakeLists.txt  mem.c  mem.h
components/mm/tlsf/: qcc74x_tlsf.c
components/multimedia/: CMakeLists.txt
components/multimedia/algrtc/: CMakeLists.txt
components/multimedia/xcodec/: CMakeLists.txt
components/multimedia/xport/: CMakeLists.txt
components/net/netbus/: CMakeLists.txt
components/os/freertos/: CMakeLists.txt  tasks.c
components/utils/: CMakeLists.txt
components/utils/cjson/: version
components/utils/coredump/: bin_fmt_v1.c  coredump.c  coredump.h  qcc74x_coredump.c  qcc74x_coredump.h
components/utils/getopt/: utils_getopt.c
components/utils/qcc74x_mtd/: qcc74x_boot2.c
components/wireless/: CMakeLists.txt
components/wireless/bluetooth/: CMakeLists.txt  ble_common.cmake  ble_common.mk
components/wireless/lmac154/: ChangeLog.md
components/wireless/lpfw_private/: lpfw_wifi.c  qcc74x_lpfw.mk
components/wireless/qcc74x_macsw/: CMakeLists.txt
components/wireless/thread/: CMakeLists.txt  ChangeLog.md
components/wireless/wifi6/: CMakeLists.txt
docs/doxygen/: Doxyfile
docs/en/: conf.py  index.rst
docs/en/api_reference/: ble.rst  ble_mesh.rst  lhal.rst  qcc74xlog.rst  wifi6.rst
docs/en/get_started/: bugkiller.rst  cmake.rst  flash_cube.rst  get_started.rst  linker_script.rst  openocd.rst  operating_system.rst  repo.rst
docs/en/notes/: note_dma.rst  note_uart.rst
drivers/lhal/: CMakeLists.txt
drivers/lhal/include/: qcc74x_acomp.h  qcc74x_adc.h  qcc74x_auadc.h  qcc74x_audac.h  qcc74x_cam.h  qcc74x_cks.h  qcc74x_clock.h  qcc74x_common.h  qcc74x_core.h  qcc74x_dac.h  qcc74x_dbi.h  qcc74x_dma.h  qcc74x_ef_ctrl.h  qcc74x_efuse.h  qcc74x_emac.h  qcc74x_flash.h  qcc74x_gpio.h  qcc74x_i2c.h  qcc74x_i2s.h  qcc74x_ir.h  qcc74x_irq.h  qcc74x_kys.h  qcc74x_l1c.h  qcc74x_mjpeg.h  qcc74x_mtimer.h  qcc74x_name.h  qcc74x_platform_dma.h  qcc74x_pwm_v1.h  qcc74x_pwm_v2.h  qcc74x_rtc.h  qcc74x_sdio2.h  qcc74x_sec_ecdsa.h  qcc74x_sec_sha.h  qcc74x_spi.h  (+5 more)
drivers/pm/: CMakeLists.txt  qcc74x_sys.h
drivers/sys/: CMakeLists.txt  qcc74x_lp.h
examples/audio/: README.md
examples/boot2_isp/: CMakeLists.txt  Makefile  README.md  ReadMe  boot2_release.py  main.c  partition.c  partition.h  proj.conf  qcc74x_eflash_loader_cmds.c  qcc74x_eflash_loader_interface.c  qcc74x_eflash_loader_interface.h  qcc74x_eflash_loader_uart.c  qcc74xsp_boot_decompress.c  qcc74xsp_boot_parser.c  qcc74xsp_bootinfo.h  qcc74xsp_common.c  qcc74xsp_common.h  qcc74xsp_media_boot.c  qcc74xsp_media_boot.h  qcc74xsp_port.c  qcc74xsp_port.h
examples/btble/btble_cli/: CMakeLists.txt  README.md  proj.conf
examples/btble/btble_cli/app/bt/: app_bt.h
examples/crash/: README_v1.md  README_v2.md  main.c
examples/dsp/: README.md
examples/easyflash/: README.md
examples/fatfs/: README.md  main.c  proj.conf
examples/freertos/: README.md
examples/littlefs/: README.md  main.c
examples/lmac154/: FreeRTOSConfig.h  README.md
examples/log_dbg_assert/: README.md
examples/lua/: README.md  main.c  proj.conf
examples/lvgl/: Makefile  README.md  lv_conf.h  main.c
examples/mbedtls/: README.md
examples/mfg_test/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  main.c  mfg_atcmd.c  mfg_m154.c  mfg_main.c  mfg_main.h  mfg_version.h  modify_dts_flash_prog_cfg.ini  proj.conf
examples/partition/: README.md  flash_prog_cfg.ini
examples/peripherals/emac/lwip_iperf/: CMakeLists.txt  README.md  eth_iperf_server.c  eth_iperf_server.h  lwipopts_user.h  main.c
examples/pmu/wl_ble_lp/: CMakeLists.txt  main.c  proj.conf  tickless.c
examples/pmu/wl_lp/: CMakeLists.txt  README.md  lwipopts_user.h  main.c  proj.conf  tickless.c
examples/printf/: README.md
examples/qcc74x_block_pool/: README.md
examples/stm32_spi_host/: .gitignore
examples/thread/openthread_cli/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  flash_prog_cfg.ini  main.c  mbedtls_sample_config.h  openthread-core-proj-config.h
examples/thread/openthread_wifi_br/: CMakeLists.txt  Makefile  README.md  lwipopts_user.h  main.c  mbedtls_sample_config.h  openthread-core-proj-config.h  otbr_cmd.c  proj.conf
examples/wifi/spi_wifi/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  flash_prog_cfg.ini  lwipopts_user.h  main.c  mbedtls_sample_config.h  proj.conf
examples/wifi/spi_wifi/app/src/: app_spiwifi.c
examples/wifi/spi_wifi/app/src/atmoudle/: app_atmoudle.c
examples/wifi/spi_wifi/app/src/pm/: app_pm.c  tickless.c
examples/wifi/sta/wifi_ota_by_http/: CMakeLists.txt  main.c  partition.c  partition.h  proj.conf
examples/wifi/sta/wifi_ota_by_http/port/qcc743/: qcc74xsp_boot2_iap_flash.ld
examples/wifi/uart_wifi/: CMakeLists.txt  Makefile  README.md  flash_prog_cfg.ini  proj.conf
examples/wifi/uart_wifi/app/src/: app_uartwifi.c
examples/wifi/uart_wifi/app/src/pm/: tickless.c
tools/genromfs/: genromfs-macos  genromfs-ubuntu  genromfs.c
tools/lpfw/: patch_lpfw-macos  patch_lpfw.c
tools/qccide/: qccIdeProjConfig.json
(+809 files in other folders)
